--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,27 @@
 ---
+import Title from '@components/shared/Title.astro';
+import PokemonCard from '../components/pokemons/PokemonCard.astro';
+import type { PokemonListResponse } from '../interfaces/pokemon-list-response';
+import MainLayout from '../layouts/MainLayout.astro';
 
+const title = 'PokemonGo';
+const resp = await fetch('https://pokeapi.co/api/v2/pokemon');
+const data = (await resp.json()) as PokemonListResponse;
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<MainLayout title={title}>
+  <Title>Listado de Pokemons</Title>
+
+  <section
+    aria-label="Listado de Pokemon"
+    class="mt-4 grid grid-cols-1 sm:grid-cols-3 md:grid-cols-4 gap-4"
+  >
+    {
+      data.results.map((pokemon) => (
+        <li class="list-none text-2xl text-fuchsia-100 font-bold font-mono">
+          <PokemonCard url={pokemon.url} name={pokemon.name} />
+        </li>
+      ))
+    }
+  </section>
+</MainLayout>
